--- a/osr_mainwindow.ui
+++ b/osr_mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>270</width>
+    <width>253</width>
     <height>197</height>
    </rect>
   </property>
@@ -111,47 +111,26 @@
      <string>描画をクリア</string>
     </property>
    </widget>
-   <widget class="QTextEdit" name="textEdit">
+   <widget class="QLCDNumber" name="lcdNumber">
     <property name="geometry">
      <rect>
       <x>170</x>
-      <y>30</y>
-      <width>91</width>
-      <height>81</height>
+      <y>20</y>
+      <width>71</width>
+      <height>91</height>
      </rect>
     </property>
-    <property name="documentTitle">
-     <string/>
+    <property name="digitCount">
+     <number>1</number>
     </property>
-    <property name="lineWrapMode">
-     <enum>QTextEdit::WidgetWidth</enum>
+    <property name="mode">
+     <enum>QLCDNumber::Dec</enum>
     </property>
-    <property name="readOnly">
-     <bool>true</bool>
+    <property name="value" stdset="0">
+     <double>0.000000000000000</double>
     </property>
-    <property name="html">
-     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'.SF NS Text'; font-size:13pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:18pt; color:#5062dd;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-    </property>
-    <property name="overwriteMode">
-     <bool>false</bool>
-    </property>
-    <property name="textInteractionFlags">
-     <set>Qt::TextSelectableByMouse</set>
-    </property>
-   </widget>
-   <widget class="QWidget" name="widget" native="true">
-    <property name="geometry">
-     <rect>
-      <x>170</x>
-      <y>30</y>
-      <width>91</width>
-      <height>80</height>
-     </rect>
+    <property name="intValue" stdset="0">
+     <number>0</number>
     </property>
    </widget>
   </widget>
@@ -160,7 +139,7 @@ p, li { white-space: pre-wrap; }
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>270</width>
+     <width>253</width>
      <height>22</height>
     </rect>
    </property>
@@ -185,4 +164,3 @@ p, li { white-space: pre-wrap; }
  <resources/>
  <connections/>
 </ui>
-
